--- a/templates/results.html
+++ b/templates/results.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <h1 id="header">SirJizzALot</h1>
+        <a href="/"><h1 id="header">SirJizzALot</h1></a>
     </header>
-    <h6>Search results for {{ form_data["textinput"]}}: {{lenght}}</h6>
+    <h6>Search results for {{ form_data["textinput"]}}: {{lenght}} {{index}}</h6>
 
     {%for i in range(0, lenght)%}
   
