--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,23 +1,30 @@
 html{
-    background-color: aquamarine;
+    background-color: #1a2238;
+    color: white;
 }
 body{
-    background-color: aquamarine;
+    background-color: #1a2238;
+    color: white;
 }
 a {
-    color: black;
+    color: white;
 }
 header{
-    background-color: #ff7ff8;
+    background-color: #ff6a3d;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 2rem;
+}
+
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 .startpage{
     align-content: center;
 }
 .searchbar{
-    background-color: aquamarine;
+    background-color: #1a2238;
     width: 15em;
     height: 8em;
     justify-content: center;
@@ -28,18 +35,28 @@ header{
 }
 .searchbarbutton{
     margin-left: 10rem;
+    background-color: #f4db7d;
+    color: #1a2238;
 }
 .video-item{
-    background-color: aqua;
-    border: 2px solid black;
+    background-color: #9daaf2;
+    border: 2px solid #1a2238;
+    color: black;
     border-radius: 5px;
     display: flex;
-    width: 100vw;
+    width: auto;
     height: auto;
+    align-items: center;
 }
 .video-thumbnail{
-    border: 1px solid black;
+    border: 1px solid #1a2238;
     border-radius: 3px;
     height: 5rem;
     width: auto;
+    margin: 0.2rem;    
+}
+
+.video-name {
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
 }
