--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-    <h1 id="header">SirJizzALot</h1>
+    <!-- <h1 id="header">SirJizzALot</h1> -->
+    <img src="{{ url_for('static', filename='SirJizzALot.png') }}" alt="SirJizzALot" class="logo">
     </header>
     <div class="startpage">
     <nav class="navbar navbar-light searchbar">
