--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="/"><h1 id="header">SirJizzALot</h1></a>
+        <a href="/"><img src="{{ url_for('static', filename='SirJizzALot.png') }}" alt="SirJizzALot" class="logo"></a>
     </header>
     <div class="container">
     <h6>Search results for {{ form_data["textinput"]}}</h6>
