--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,12 +13,17 @@ header{
     background-color: #ff6a3d;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 2rem;
+    padding: 0.2rem;
+}
+
+.logo{
+    height: 20vh;
 }
 
 .container {
     padding-left: 1rem;
     padding-right: 1rem;
+    width: 100vw;
 }
 .startpage{
     align-content: center;
