--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,11 +13,11 @@ header{
     background-color: #ff6a3d;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0.2rem;
+    padding: 2rem;
 }
 
 .logo{
-    height: 20vh;
+    width: 85vw;
 }
 
 .container {
@@ -73,3 +73,13 @@ header{
     margin-left: 0.2rem;
     margin-right: 0.2rem;
 }
+
+
+
+/* Media Queries */
+
+@media screen and (min-width: 768px) {
+    .textinput {
+        width: 80vw !important;
+    }
+  }
