--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@ html{
 body{
     background-color: #1a2238;
     color: white;
+    height: 100vh;
 }
 a {
     color: white;
@@ -59,7 +60,7 @@ header{
     display: flex;
     width: auto;
     height: auto;
-    align-items: center;
+    margin-bottom: 0.2rem;
 }
 .video-thumbnail{
     border: 1px solid #1a2238;
@@ -70,16 +71,38 @@ header{
 }
 
 .video-name {
+    margin-top: 0.2rem;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
+}
+
+.resultNumber{
+    margin-top: 0.2rem;
 }
 
 
 
 /* Media Queries */
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 740px) {
     .textinput {
         width: 80vw !important;
+        margin-right: 0 !important;
+    }
+  }
+
+@media screen and (min-width: 640px) and (orientation: landscape) {
+    .logo{
+        width: 40vw;
+    }
+    .searchbar{
+        justify-content: center;
+        position: absolute;
+        top:  70%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    .textinput {
+        width: 80vw !important;
+        margin-right: 0 !important;
     }
   }
