--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SirJizzALot - Porn Search Engine</title>
+    <meta name="description" content="SirJizzALot lets you search for the best porn videos from different sites at once for FREE!
+            No need to decide what site to use anymore.">
+    <meta name="keywords" content="porn, search, pornhub, youporn, xnxx, tube8, videos, free" />
+
 </head>
 <body>
     <header>
-    <!-- <h1 id="header">SirJizzALot</h1> -->
     <img src="{{ url_for('static', filename='SirJizzALot.png') }}" alt="SirJizzALot" class="logo">
     </header>
     <div class="startpage">
